[metadata]
name = AMO2Git
#version = 0.1
author = KOLANICH
url = https://gitlab.com/KOLANICH1/AMO2Git.py
description = This tool converts a release history on AMO into a git repo history.
long_description = file: ReadMe.md
keywords = addons, Mozilla, xpi, WebExtension
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Everyone
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent

[options]
python_requires = >=3.4
zip_safe = True
packages = AMO2Git, AMO2Git.utils
setup_requires = setuptools_scm;
test_suite = tests.tests.Tests
dependency_links =
	git+https://github.com/tomerfiliba/plumbum.git#egg=plumbum
	git+https://github.com/gitpython-developers/GitPython.git#egg=gitpython
	git+https://github.com/requests/requests.git#egg=requests
	git+https://github.com/tqdm/tqdm.git#egg=tqdm

install_requires = 
	requests
	plumbum
	gitpython
	tqdm

[options.entry_points]
console_scripts = AMO2Git = AMO2Git.__main__:AMO2GitCLI.run
